# asciimmopy

./: LICENSE  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  runclient.py  runserver.py
client/: main.py  sync.py
core/: __init__.py  actor.py  entity.py  map.py
server/: main.py
