[tool.poetry]
name = "asciimmopy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
jsonpickle = "^2.0.0"

[tool.poetry.dev-dependencies]
Nuitka = "^0.6.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
